Revision history for Dist-Zilla-Plugin-MungeFile-WithConfigFile

{{$NEXT}}

0.003     2015-08-18 02:17:09Z
          - some documentation fixes
          - documented the limitations with respect to file decodings
          - updated some bits of the distribution packaging

0.002     2014-01-28 03:41:49Z
          - add missing test dependency to read config files

0.001     2014-01-27 01:30:05Z
          - Initial release.